# wais-mcp

./: ._.git  .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
.beads/: .migration-hint-ts  config.yaml  issues.jsonl
wais_mcp/: __init__.py  _tool_client.py  auth.py  cli.py  client.py  http.py  manifest.py  polling.py  server.py  session.py
wais_mcp/tools/: __init__.py  confirm.py  discover.py  execute.py  register.py  status.py
